[tool.poetry]
authors = [
    "Gavin Ni <gisngy@gmail.com>",
    "Jason Maners <jason.maners@gmail.com>",
    "Justin Vanderhooft <justinvdhooft@gmail.com>",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Python client for Toyota North America service API"
keywords = ["bluetooth", "melnor", "home automation", "irrigation", "gardening"]
license = "MIT"
name = "toyota-na"
readme = "README.md"
version = "0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
cryptography = ">=35.0.1"
pytz = "^2022.1"
PyJWT = ">=2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry-dynamic-versioning]
bump = false
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.pytest.ini_options]
asyncio_mode = 'auto'
