[metadata]
name = toyota-na
version = 0.0.0
author = Gavin Ni
author_email = gisngy@gmail.com
description = Python client for Toyota North America service API
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/widewing/toyota-na
project_urls =
    Bug Tracker = https://github.com/widewing/toyota-na/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    toyota_na
include_package_data = True
python_requires = >=3.9
install_requires =
    aiohttp
    pyjwt[crypto] = >=2.2.0
    pytz

[options.package_data]
* = *.pyi