[metadata]
name = toyota-na
version = 0.0.0
author = Gavin Ni
author_email = gisngy@gmail.com
description = Python client for Toyota North America service API
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/widewing/toyota-na
project_urls =
    Bug Tracker = https://github.com/widewing/toyota-na/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    toyota_na
include_package_data = True
python_requires = >=3.9
install_requires =
    aiohttp
    pytz
    # This is pretty fragile for a python library. But we're dealing with some constraints in what HA is pulling
    PyJWT==2.1.0
    # PyJWT has loose dependency. We want the latest one.
    cryptography==35.0.0


[options.package_data]
* = *.pyi