[metadata]
name = toyota-na
version = 0.0.0
author = Gavin Ni
author_email = gisngy@gmail.com
description = Python client for Toyota North America service API
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/widewing/toyota-na
project_urls =
    Bug Tracker = https://github.com/widewing/toyota-na/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    toyota_na
include_package_data = True
python_requires = >=3.9
install_requires =
    aiohttp
    cryptography>=35.0.0 # PyJWT has loose dependency. We want the latest one.
    pytz
    PyJWT>=2.1.0 # This isn't great but Home Assistant is pinning `cryptography` so we need to mimic that behavior to avoid conflicts

[options.package_data]
* = *.pyi